tests/type-errors/compare_list_int.arl
archetype compare_list_int

entry exec() {
  effect {
    var a : list<int> = [0];
    var b : int = 1;
    dorequire (a = b)
  }
}
